# nekoo-host

./: .env.build  .gitignore  Cargo.toml  README.md  backup_db.sh  nginx.conf  nginx_original.conf
.github/workflows/: host.yml
migrations/: 20240101000000_initial_schema.sql
nginx_configs/: nekoo
src/: db.rs  github.rs  main.rs  routes.rs
templates/: 404.html  admin.html  help.html  index.html  terms.html  view.html
