[package]
name = "nekoo"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "fs", "io-util", "net", "time", "sync"] }
tower = { version = "0.4", features = ["limit", "util"] }
tower-http = { version = "0.5", features = ["limit", "cors", "fs", "compression-gzip"] }
reqwest = { version = "0.11", features = ["json", "stream", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
mime = "0.3"
futures = "0.3"
regex = "1"
tokio-stream = { version = "0.1.18", features = ["fs"] }
bytes = "1.11.0"
tokio-util = { version = "0.7.18", features = ["io", "io-util"] }
urlencoding = "2.1.3"
chrono = { version = "0.4.42", features = ["serde"] }
trust-dns-resolver = "0.23"
once_cell = "1.21"
tikv-jemallocator = "0.5"
dotenvy = "0.15"
sysinfo = "0.30"
bcrypt = "0.15"
argon2 = "0.5"
uuid = { version = "1.6", features = ["v4", "serde"] }

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
opt-level = 3
panic = "abort"
